Bug: Fixing HeaderComponent alignment on specific width screens

--- a/assets/css/bundle.css
+++ b/assets/css/bundle.css
@@ -138,9 +138,17 @@
   font-weight: 500;
 }
 
+.icon-header li {
+  display: inline-block;
+}
+
 @media all and (min-width:320px) and (max-width:529px) {
   .header h1 {
     font-size: 2em;
+  }
+
+  .icon-header li {
+    display: block;
   }
 }
 .project-list li {
