--- a/src/components/HeaderComponent/Header.less
+++ b/src/components/HeaderComponent/Header.less
@@ -38,5 +38,14 @@
   }
 }
 
+.icon-header li {
+
+  display: inline-block;
+
+  @media @mobile {
+    display: block;
+  }
+}
+
 
 
